--- a/client/index.html
+++ b/client/index.html
@@ -8,20 +8,13 @@
 	<script type="text/javascript" src="my_angular/config.js"></script>
 	<script type="text/javascript" src="my_angular/loginController.js"></script>
 	<script type="text/javascript" src="my_angular/homeController.js"></script>
+	<script type="text/javascript" src="my_angular/registrationController.js"></script>
 	<script type="text/javascript" src="my_angular/synthFactory.js"></script>
 	<link rel="stylesheet" href="static/css/synth.css">
 </head>
 <body>
 	<h1>Welcome to the Machine</h1>
 	<div ng-view></div>
-	<div id="synthmodule">
-	  <div id="osctray">
-	    <p><button class='btn'></button>Sine Wave</p>
-	    <p><button class='btn'></button>Triangle Wave</p>
-	    <p><button class='btn'></button>Square Wave</p>
-	    <p><button class='btn'></button>Sawtooth Wave</p>
-	  </div>
-	</div>
 
 </body>
 </html>
