--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-	<title>MEAN Synth</title>
+	<title>The LSE Synth</title>
 	<script type="text/javascript" src="angular/angular.js"></script>
 	<script type="text/javascript" src="angular-route/angular-route.js"></script>
 	<script type="text/javascript" src="angular-messages/angular-messages.js"></script>
@@ -10,7 +10,8 @@
 	<script type="text/javascript" src="my_angular/homeController.js"></script>
 	<script type="text/javascript" src="my_angular/registrationController.js"></script>
 	<script type="text/javascript" src="my_angular/synthFactory.js"></script>
-	<link rel="stylesheet" href="static/css/synth.css">
+	<script type="text/javascript" src="my_angular/registrationController.js"></script>
+	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 	<h1>Welcome to the Machine</h1>
