--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-	<h1>Welcome to the Machine</h1>
+	<h1>Welcome to the LSE Synth</h1>
 	<div ng-view></div>
 
 </body>
