--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="my_angular/synthFactory.js"></script>
 	<script type="text/javascript" src="my_angular/registrationController.js"></script>
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="static/css/synth.css">
 </head>
 <body>
 	<h1>Welcome to the LSE Synth</h1>
