removed some files

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="my_angular/loginController.js"></script>
 	<script type="text/javascript" src="my_angular/homeController.js"></script>
 	<script type="text/javascript" src="my_angular/registrationController.js"></script>
+	<script type="text/javascript" src="my_angular/synthController.js"></script>
 	<script type="text/javascript" src="my_angular/synthFactory.js"></script>
 	<script type="text/javascript" src="my_angular/registrationController.js"></script>
 	<link rel="stylesheet" href="css/index.css">
